/*
 * $Id: ChangeLog,v 1.5200 2006/10/12 19:48:25 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-10-12 15:43 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib/rdd_ads/ace.h
    * New unmodified file from latest (8.1) ADS sdk
    - Original file had 1 xHarbour modification which was moved to rddads.h
      /* Please avoid modifying ace.h */
  * contrib/rdd_ads/rddads.h
    * Corrected 2 undocumented funs declaration to be guarded by the appropriate #ifdef and placed inside the HB_EXTERN section
    * Updated default of ADS_REQUIRE_VERSION to 81 - users of ADS version 6, will need to add a -DADS_REQUIRE_VERSION=6 to their make file[s]
  * contrib/rdd_ads/adsmgmnt.c
    * Synched with some ADS structure modification in the 8,1 sdk - should not affect binary compatability with older client versions

2006-10-12 13:25 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbsetup.ch
  * utils/xbscript/xbscript.prg
    - Removed refernce to old define

  * source/rtl/set.c
    * Corrected file open attribute

2006-10-11 10:58 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *bmdbfcdx1.c
    * optimized hb_cdxCheckRecordFilter when optimized filter is bitmap filter.

2006-10-11 10:58 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *bmdbfcdx1.c
   *hbrddbmcdx.h
    + Added bitmap filter sincronitzation on APPEND, DELETE, RECALL and FIELDPUT.

2006-10-10 21:04 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * utils/xbscript/rp_dot.src
  * utils/xbscript/xbscript.prg
    * Conditional rule guarded by #ifdef AX

2006-10-10 16:37 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * xharbour/source/vm/hvm.c
    * Minor consistency cleanup regarding #ifdef __WIN32__ (I hope I'm not missing something)

  * source\rtl\win32ole.prg
  * xharbour/source/vm/hvm.c